syntax = "proto3";
package cosmos.authz.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/api/annotations.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/authz/types";

// Query defines the gRPC querier service.
service Query {
  // Returns any `Authorization` (or `nil`), with the expiration time, granted to the grantee by the granter for the
  // provided msg type.
  rpc Authorization(QueryAuthorizationRequest) returns (QueryAuthorizationResponse) {
    option (google.api.http).get = "/cosmos/authz/v1beta1/granters/{granter_addr}/grantees/{grantee_addr}";
  }
}

// QueryAuthorizationRequest is the request type for the Query/Authorization RPC method.
message QueryAuthorizationRequest {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string granter_addr = 1;
  string grantee_addr = 2;
  string msg_type     = 3;
}

// QueryAuthorizationResponse is the response type for the Query/Authorization RPC method.
message QueryAuthorizationResponse {
  // account defines the account of the corresponding address.
  google.protobuf.Any authorization = 1 [(cosmos_proto.accepts_interface) = "Authorization"];
}
